[package]
name = "mpm_mods-per-minute"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im"] }
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"